Fixed issue that invoking Dolphin with a specified path is ignored when another Dolphin window is open already. Thanks to Frank Reininghaus for the patch.

BUG: 169016

svn path=/trunk/KDE/kdebase/apps/; revision=927544